--- a/css/announcements.scss
+++ b/css/announcements.scss
@@ -29,7 +29,7 @@ div.content {
   height:74px;
   font-weight: normal;
   padding: 37px 20px 8px 78px;
-  z-index:9001; /* APHOENIX! WHAT DOES THE SCOUTER SAY ABOUT HIS POWERLEVEL? */
+  z-index:90;
   background:url('%%announcehead%%');
   background-repeat:no-repeat;
   color:#B39265;
