--- a/css/countdown.scss
+++ b/css/countdown.scss
@@ -14,7 +14,7 @@
   position:absolute;
   top:242px;
   right:51px;
-  z-index:99999;
+  z-index:100;
   text-indent:-999em;
 }
 
