--- a/css/header.scss
+++ b/css/header.scss
@@ -16,7 +16,7 @@
   top: 36px;
   width: 150px;
   background-position:center top;
-  z-index:99999;
+  z-index:100;
 }
 .pagename a:hover {
 background-position:center bottom;
@@ -75,7 +75,7 @@ background-position:center bottom;
   background-position:center bottom;
   display:inline-block;
   position:relative;
-  z-index:99999;
+  z-index:100;
 }
 #header-img-a:hover {
   background-position:center top;
@@ -95,7 +95,7 @@ background-position:center bottom;
   padding-left: 30px;
   padding-right: 7px;
   font-size: 10px;
-  z-index:9999;
+  z-index:90;
 }
 #header-bottom-right a {
   color: #a1dfff;
@@ -141,6 +141,7 @@ margin-left:25px !important;
 #header-bottom-left {
   position: relative;
   bottom: 0;
+  z-index:80;
 }
 
 #header-bottom-left .tabmenu {
@@ -151,7 +152,7 @@ margin-left:25px !important;
   position:absolute;
   top:107px;
   left:54px;
-  z-index:9999;
+  z-index:80;
 }
 
 #header-bottom-left .tabmenu li {
